@@ -3,6 +3,8 @@ NEWS - OpenPrinting CUPS Filters v1.18.0 - 2017-12-19
 
 CHANGES IN V1.19.0
 
+	- libcupsfilters: Improved the generation of the PageSize
+	  option in PPDs, using also "media-col-database".
 	- libcupsfilters: Improvements on header of generated PPDs:
 	  use cups-filters version number, "drvless.ppd" PCFileName,
 	  APSupplies and cupsChargeInfoURI from CUPS.
